Removed header refs to missing file. Fixed swipe donation sequence. Deselected campaign feed cells.

--- a/WeCrowd/Base.lproj/PaymentFlow.storyboard
+++ b/WeCrowd/Base.lproj/PaymentFlow.storyboard
@@ -440,7 +440,7 @@
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Placeholder" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="GEp-fw-Fju">
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="50" placeholder="Placeholder" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="GEp-fw-Fju">
                                                     <rect key="frame" x="114" y="6" width="470" height="17"/>
                                                     <color key="textColor" red="0.39005287249999998" green="0.39005287249999998" blue="0.39005287249999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
